--- a/BoardGames_Semestralka/MainWindow.xaml
+++ b/BoardGames_Semestralka/MainWindow.xaml
@@ -49,15 +49,31 @@
                 <StackPanel Margin="10" Orientation="Vertical">
 
                     <StackPanel Margin="15, 20, 15, 20">
-                        <TextBlock Text="Žánry" FontWeight="Bold" Margin="0,0,0,5"/>
+                        <DockPanel>
+                            <TextBlock Text="Žánry" FontWeight="Bold" Margin="0,0,5,0" DockPanel.Dock="Left"/>
+                            
+                        </DockPanel>
+
                         <ListBox x:Name="GenresList"
-                                 SelectionMode="Multiple"
-                                 Background="Transparent"
-                                 Foreground="#FFAD9C72"
-                                 MaxHeight="250"
-                                 BorderBrush="Transparent"
-                                 SelectionChanged="GenresList_SelectionChanged"/>
+                                SelectionMode="Multiple"
+                                Background="Transparent"
+                                Foreground="#FFAD9C72"
+                                MaxHeight="250"
+                                BorderBrush="Transparent"
+                                SelectionChanged="GenresList_SelectionChanged"/>
+                        <Button Content="➕"
+                                Click="AddGenre_Click"
+                                Background="Transparent"
+                                BorderBrush="Transparent"
+                                Foreground="#FF4FC0CE"
+                                FontWeight="Bold"
+                                Padding="0"
+                                Width="24"
+                                Height="24"
+                                Cursor="Hand"
+                                ToolTip="Přidat nový žánr"/>
                     </StackPanel>
+
 
                     <StackPanel Margin="15, 20, 15, 20">
                         <TextBlock Text="Cena" FontWeight="Bold" Margin="0,0,0,5" Height="18"/>
